--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,3 +4,7 @@ compatibility_date = "2024-01-01"
 
 [env.production]
 name = "simplyoverthinking"
+
+[assets]
+directory = "./assets"
+binding   = "ASSETS"  
